Migrate to from java 21 to 8 to future support 1.8.8+